routing related issue fixed

--- a/src/app/pages/destinations/destinations.html
+++ b/src/app/pages/destinations/destinations.html
@@ -1,1 +1,6 @@
-<p>destinations works!</p>
+<app-navbar></app-navbar>
+
+<div class="px-8 py-16">
+  <h1 class="text-3xl font-bold">Destinations</h1>
+  <p class="mt-2 text-gray-600">This page is working ✅</p>
+</div>
