--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -1,5 +1,7 @@
 <header class="flex items-center justify-between px-8 py-5 border-b">
-  <h1 class="text-xl font-extrabold">Travelify</h1>
+  <h1 class="text-xl font-extrabold">
+    <a routerLink="/">Travelify</a>
+  </h1>
 
   <nav class="flex gap-6 items-center">
     <a class="text-sm text-gray-600 hover:text-black" routerLink="/destinations"> Destinations </a>
