--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 @import 'tailwindcss';
-@plugin "tailwindcss-animate";
+/* @plugin "tailwindcss-animate"; */
 
 @custom-variant dark (&:is(.dark *));
 
